modificari post pilotare

--- a/src/pages/instruments/01_cpis_uz.html
+++ b/src/pages/instruments/01_cpis_uz.html
@@ -122,7 +122,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">2. BOLA HAQIDA ASOSIY MA'LUMOT</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">2. BOLA HAQIDA ASOSIY MA'LUMOTLAR</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>Shaxsiy identifikatsiya raqami. Tug'ilganlik haqidagi guvohnoma / Pasport / shaxsni tasdiqlovchi hujjat</div>
@@ -209,26 +209,6 @@
                     </select>
                 </div>
             </div>
-            <div class="grid grid-cols-2 gap-4 items-start mt-6">
-                <div>LK14d. Aholi punkti</div>
-                <div>
-                    <select id="lk14d" name="lk14d" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
-                        <option value="-9">--- tanlang ---</option>
-                    </select>
-
-                </div>
-            </div>
-            <div class="grid grid-cols-2 gap-4 items-start mt-6">
-                <div>LK14m. Mahalla</div>
-                <div>
-                    <select id="lk14m" name="lk14m" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
-                        <option value="-9">--- tanlang ---</option>
-                    </select>
-
-                </div>
-            </div>
-
-            <input type="hidden" id="lk14e" name="lk14e" />
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>LK12. Bolaning etnik kelib chiqishi (millati)</div>
@@ -446,26 +426,6 @@
                     </select>
                 </div>
             </div>
-            <div class="grid grid-cols-2 gap-4 items-start mt-6">
-                <div>CM3d. Aholi punkti</div>
-                <div>
-                    <select id="cm3d" name="cm3d" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
-                        <option value="-9">--- tanlang ---</option>
-                    </select>
-
-                </div>
-            </div>
-            <div class="grid grid-cols-2 gap-4 items-start mt-6">
-                <div>CM3m. Mahalla</div>
-                <div>
-                    <select id="cm3m" name="cm3m" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
-                        <option value="-9">--- tanlang ---</option>
-                    </select>
-
-                </div>
-            </div>
-
-            <input type="hidden" id="cm3e" name="cm3e" />
 
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
@@ -487,7 +447,7 @@
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-start mt-10">
-                <div>CM5a. Bolaning vasiylik tizimga qabul qilinishi vaqtida onasining oilaviy ahvoli<small class="my-2 block italic text-red-500">* "Alohida yashaydi" degani u hali ham qonuniy nikohda, lekin turmush o'rtog'i bilan birga yashamaydi.</small></div>
+                <div>CM5a. Bola vasiylik tizimga qabul qilinishi vaqtida onasining oilaviy ahvoli<small class="my-2 block italic text-red-500">* "Alohida yashaydi" degani u hali ham qonuniy nikohda, lekin turmush o'rtog'i bilan birga yashamaydi.</small></div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
                         <input type="radio" id="cm5a-1" name="cm5a" value="1" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
@@ -570,7 +530,7 @@
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-start mt-10">
-                <div>CM6a. Bolaning vasiylik tizimga qabul qilinishi vaqtida onasining sog'lig'i</div>
+                <div>CM6a. Bola vasiylik tizimga qabul qilinishi vaqtida onasining sog'lig'i</div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
                         <input type="radio" id="cm6a-1" name="cm6a" value="0" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
@@ -649,7 +609,7 @@
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-start mt-10">
-                <div>CM7a. Bolaning vasiylik tizimga qabul qilinishi vaqtida onasining ma'lumoti darajasi</div>
+                <div>CM7a. Bola vasiylik tizimga qabul qilinishi vaqtida onasining ma'lumoti darajasi</div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
                         <input type="radio" id="cm7a-1" name="cm7a" value="0" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
@@ -723,7 +683,7 @@
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-start mt-10">
-                <div>CM8a. Bolaning vasiylik tizimga qabul qilinishi vaqtidagi onasining mehnat bandligi holati</div>
+                <div>CM8a. Bola vasiylik tizimga qabul qilinishi vaqtida onasining mehnat bandligi holati</div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
                         <input type="radio" id="cm8a-1" name="cm8a" value="1" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
@@ -877,7 +837,7 @@
 
 
             <div class="grid grid-cols-2 gap-4 items-start mt-10">
-                <div>CM9. Bolaningi vasiylik tizimga qabul qilinishi chog'ida onasining atrofdagilarga xavf tug'diruvchi xatti-harakatlari:</div>
+                <div>CM9. Bola vasiylik tizimga qabul qilinishi chog'ida onasining atrofdagilarga xavf tug'diruvchi xatti-harakatlari:</div>
                 <div>
                     <div class="mb-4">
                         <div class="mb-2">a. Spirtli ichimliklarni suiste'mol qiladimi?</div>
@@ -951,7 +911,7 @@
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-10">
-                <div>CM10. Bolaning vasiylik tizimga qabul qilinishi vaqtida onasining yashash joyi</div>
+                <div>CM10. Bola vasiylik tizimga qabul qilinishi vaqtida onasining yashash joyi</div>
                 <div>
                     <div class="mb-4">
                         <div class="mb-2">a. U qayerda istiqomat qilib kelgan...?</div>
@@ -1270,27 +1230,6 @@
                     </select>
                 </div>
             </div>
-            <div class="grid grid-cols-2 gap-4 items-start mt-6">
-                <div>CT3d. Aholi punkti</div>
-                <div>
-                    <select id="ct3d" name="ct3d" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
-                        <option value="-9">--- tanlang ---</option>
-                    </select>
-
-                </div>
-            </div>
-
-            <div class="grid grid-cols-2 gap-4 items-start mt-6">
-                <div>CT3m. Mahalla</div>
-                <div>
-                    <select id="ct3m" name="ct3m" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
-                        <option value="-9">--- tanlang ---</option>
-                    </select>
-
-                </div>
-            </div>
-
-            <input type="hidden" id="ct3e" name="ct3e" />
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>CT4. Otaning etnik kelib chiqishi (millati)</div>
@@ -1918,7 +1857,7 @@
 
 
             <!-- CAREGIVER -->
-            <h3 class="text-xl mt-10 mb-2 font-semibold bg-gray-100 px-2 py-1 text-gray-700">3.3. BOLANI PARVARISHLAB KELGAN SHAXS</h3>
+            <h3 class="text-xl mt-10 mb-2 font-semibold bg-gray-100 px-2 py-1 text-gray-700">3.3. BOLAGA G'AMXO'RLIK QILIB KELGAN SHAXS</h3>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>
@@ -1931,7 +1870,7 @@
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
-                <div>CG1a. Bola va uning vasiysi o'rtasidagi munosabat qanday?</div>
+                <div>CG1a. Bola va uning vasiysi o'rtasidagi aloqadirlik?</div>
                 <div class="flex gap-4">
                     <div class="flex items-center">
                         <input type="radio" id="cg1a-1" name="cg1a" value="1" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
@@ -1983,7 +1922,7 @@
                     </div>
                     <div class="flex items-center">
                         <input type="radio" id="cg1d-4" name="cg1d" value="4" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="cg1d-4" class="ms-2 text-sm text-gray-900">4. Katta buza/katta buvi (qarindoshlikning 3-bosqichi)</label>
+                        <label for="cg1d-4" class="ms-2 text-sm text-gray-900">4. Katta buva/katta buvi (qarindoshlikning 3-bosqichi)</label>
                     </div>
                     <div class="flex items-center">
                         <input type="radio" id="cg1d-5" name="cg1d" value="5" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
@@ -5700,7 +5639,7 @@
             <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">11. MUSTAQIL YASHASH KO'NIKMALARI</h2>
             <small class="my-2 block italic text-red-500">Bo'lim faqat 16 va undan katta yoshdagi yoshlar uchun amal qiladi.</small>
 
-            <p>DVI. 1 = tamoman yo'qdan 10 gacha bo'lgan shkala bo'yicha, yoshlarning quyidagi mustaqil yashash ko'nikmalari/qobiliyatlari bo'yicha rivojlanish darajasini qanday baholaysiz?</p>
+            <p>DVI. 1 dan 10 gacha bo'lgan shkala bo'yicha, yoshlarning quyidagi mustaqil yashash ko'nikmalari/qobiliyatlari bo'yicha rivojlanish darajasini qanday baholaysiz?</p>
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div class="ml-3">DVI1. Ovqat tayyorlash va uni taqdim etish (Taom tanlash, pishirish, tashkillashtirish/servirovka qilish)</div>
                 <select id="dvi1" name="dvi1" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
@@ -6632,7 +6571,7 @@
             </div>
 
             <div class="grid mt-10">
-                <label for="obs">OBS. Kuzatuvlarni</label>
+                <label for="obs">OBS. Izohlar</label>
                 <textarea class="form-control" rows="3" id="obs" name="obs"></textarea>
             </div>
 
