--- a/src/pages/instruments/03_csr_uz.html
+++ b/src/pages/instruments/03_csr_uz.html
@@ -163,7 +163,7 @@
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-start mt-10">
-                <div>J3. Ish sinfi:</div>
+                <div>J3. Bajaradigan ish sohasi:</div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
                         <input id="j3-1" type="radio" value="1" name="j3" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
@@ -175,7 +175,7 @@
                     </div>
                     <div class="flex items-center">
                         <input id="j3-3" type="radio" value="3" name="j3" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="j3-3" class="ms-2 text-sm text-gray-900">3. Xizmat ko'rsatish, parvarishlash / Yordam</label>
+                        <label for="j3-3" class="ms-2 text-sm text-gray-900">3. Xizmat ko'rsatish, vasiylik / yordam</label>
                     </div>
                     <div class="flex items-center">
                         <input id="j3-4" type="radio" value="4" name="j3" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
@@ -255,20 +255,20 @@
                 <div>J7. Ushbu lavozim uchun talab qilinayotgan tajriba darajasi (ish tajribasi yillarining minimal soni)</div>
                 <div class="flex items-center gap-4">
                     <input type="text" id="j7" name="j7" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block" />
-                    yillar
+                    yil
                 </div>
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-10">
-                <div>J8. Bandlikning xozirgi xolati:</div>
+                <div>J8. Ushbu lavozim o'rinning xozirgi xolati:</div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
                         <input id="j8-1" type="radio" value="1" name="j8" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="j8-1" class="ms-2 text-sm text-gray-900">1. Doimiy bandlik</label>
+                        <label for="j8-1" class="ms-2 text-sm text-gray-900">1. Doimiy band</label>
                     </div>
                     <div class="flex items-center">
                         <input id="j8-2" type="radio" value="2" name="j8" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="j8-2" class="ms-2 text-sm text-gray-900">2. Vaqtinchalik bandlik</label>
+                        <label for="j8-2" class="ms-2 text-sm text-gray-900">2. Vaqtincha band</label>
                     </div>
                     <div class="flex items-center">
                         <input id="j8-3" type="radio" value="3" name="j8" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
@@ -362,7 +362,7 @@
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>E6. Boshqa tashkilotlarda ushbu yoki shunga o'xshash lavozimlarda faoliyat yuritgan ish tajribasi yillarining umumiy soni</div>
                 <div class="flex items-center gap-4">
-                    <input type="text" id="e6" name="e6" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block" /> yillar
+                    <input type="text" id="e6" name="e6" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block" /> yil
                 </div>
             </div>
 
@@ -498,7 +498,7 @@
                 <div>E14. Xodimga ish haqi to'lanadigan ta'til (taqvim bo'yicha) umumiy soni qancha?</div>
                 <div class="flex items-center gap-4">
                     <input type="text" id="e14" name="e14" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block" />
-                    taqvim kunlar
+                    taqvim kunlari
                 </div>
             </div>
 
@@ -510,7 +510,7 @@
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-10">
-                <div>E16. So'nggi uch yil ichida muassasaga joylashtirilgan bolalarga nisbatan noto'g'ri xatti-harakatlar, yomon muomala yoki suiiste'molliklar bo'yicha xodimlar ustidan  shikoyatlar bo'lganmi?</div>
+                <div>E16. So'ngi uch yil ichida muassasaga joylashtirilgan bolalarga nisbatan noto'g'ri xatti-harakatlar, yomon muomala yoki suiiste'molliklar bo'yicha xodim ustidan shikoyatlar bo'lganmi?</div>
                 <div class="col-span-1 flex gap-4 items-center">
                     <div class="flex items-center">
                         <input id="e16-1" type="radio" value="1" name="e16" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
@@ -524,7 +524,7 @@
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-10">
-                <div>E17. So'nggi uch yil ichida muassasaga joylashtirilgan bolalarga nisbatan biror bir noto'g'ri xatti-harakatlar, yomon muomila yoki zo'ravonlik uchun xodimga jazo tayinlanganmi?</div>
+                <div>E17. So'ngi uch yil ichida muassasaga joylashtirilgan bolalarga nisbatan biror bir noto'g'ri xatti-harakatlar, yomon muomila yoki zo'ravonlik uchun xodimga jazo tayinlanganmi?</div>
                 <div class="col-span-1 flex gap-4 items-center">
                     <div class="flex items-center">
                         <input id="e17-1" type="radio" value="1" name="e17" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
@@ -552,7 +552,7 @@
             </div>
 
             <div class="grid mt-10">
-                <label for="obs">OBS. Kuzatuvlarni</label>
+                <label for="obs">OBS. Izohlar</label>
                 <textarea class="form-control" rows="3" id="obs" name="obs"></textarea>
             </div>
 
