--- a/src/pages/instruments/04_qmr_ru.html
+++ b/src/pages/instruments/04_qmr_ru.html
@@ -159,7 +159,7 @@
                 <div>I12a. Сколько детей проживало в учреждении по состоянию на 31 декабря отчетного года (2023)?</div>
                 <div class="flex items-center gap-4">
                     <input type="text" id="i12a" name="i12a" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
-                    <span>дети</span>
+                    <span>детей</span>
                 </div>
             </div>
             <p class="italic uppercase mt-6 text-sm mb-2">ТОЛЬКО ДЛЯ СПЕЦИАЛИЗИРОВАННЫХ ШКОЛ-ИНТЕРНАТОВ</p>
@@ -176,42 +176,42 @@
                     <div>I13b. Сколько детей не проживают в школе-интернате, а  приезжают каждый день?</div>
                     <div class="flex items-center gap-4">
                         <input type="text" id="i13b" name="i13b" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
-                        <span>дети</span>
+                        <span>детей</span>
                     </div>
                 </div>
                 <div class="grid grid-cols-2 gap-4 items-start mt-6">
                     <div>I13c. Сколько детей остаются в школе-интернате в течение недели, но уезжают домой на выходные?</div>
                     <div class="flex items-center gap-4">
                         <input type="text" id="i13c" name="i13c" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
-                        <span>дети</span>
+                        <span>детей</span>
                     </div>
                 </div>
                 <div class="grid grid-cols-2 gap-4 items-start mt-6">
                     <div>I13d. Сколько детей остаются в школе -интернате в течение недели, но уезжают домой только во время каникул?</div>
                     <div class="flex items-center gap-4">
                         <input type="text" id="i13d" name="i13d" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
-                        <span>дети</span>
+                        <span>детей</span>
                     </div>
                 </div>
                 <div class="grid grid-cols-2 gap-4 items-start mt-6">
                     <div>I13e. Сколько детей постоянно проживают в школе-интернате, включая выходные и каникулы?</div>
                     <div class="flex items-center gap-4">
                         <input type="text" id="i13e" name="i13e" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
-                        <span>дети</span>
+                        <span>детей</span>
                     </div>
                 </div>
                 <div class="grid grid-cols-2 gap-4 items-start mt-6">
                     <div>I13f. Сколько детей находятся на надомном обучении, предоставляемой персоналом школы-интерната?</div>
                     <div class="flex items-center gap-4">
                         <input type="text" id="i13f" name="i13f" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
-                        <span>дети</span>
+                        <span>детей</span>
                     </div>
                 </div>
                 <div class="grid grid-cols-2 gap-4 items-start mt-6">
                     <div>I13g. Сколько детей лишены родительской опеки, невзирая на причины (дети-сироты, брошенные дети, дети, чьи родители были лишены родительских прав)?</div>
                     <div class="flex items-center gap-4">
                         <input type="text" id="i13g" name="i13g" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
-                        <span>дети</span>
+                        <span>детей</span>
                     </div>
                 </div>
             </div>
@@ -1260,7 +1260,7 @@
                         <td class="p-1"></td>
                     </tr>
                     <tr>
-                        <td class="p-1">i. Изоляторы используюся только для изоляции детей с поблемами в поведении</td>
+                        <td class="p-1">i. Изоляторы используюся только для изоляции детей с проблемами в поведении</td>
                         <td class="p-1">
                             <input type="text" id="ac1i1" name="ac1i1" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block" />
                         </td>
@@ -2013,7 +2013,7 @@
                 </div>
                 <div class="flex items-center gap-3">
                     <input type="text" id="de2a" name="de2a" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-20" />
-                    учащиеся
+                    учащихся
                 </div>
             </div>
             <div class="grid grid-cols-3 gap-4 items-center mt-2">
@@ -2024,7 +2024,7 @@
                 </div>
                 <div class="flex items-center gap-3">
                     <input type="text" id="de2b" name="de2b" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-20" />
-                    учащиеся
+                    учащихся
                 </div>
             </div>
             <div class="grid grid-cols-3 gap-4 items-center mt-2">
@@ -2035,7 +2035,7 @@
                 </div>
                 <div class="flex items-center gap-3">
                     <input type="text" id="de2c" name="de2c" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-20" />
-                    учащиеся
+                    учащихся
                 </div>
             </div>
             <div class="grid grid-cols-3 gap-4 items-center mt-2">
@@ -2046,7 +2046,7 @@
                 </div>
                 <div class="flex items-center gap-3">
                     <input type="text" id="de2d" name="de2d" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-20" />
-                    учащиеся
+                    учащихся
                 </div>
             </div>
             <div class="grid grid-cols-3 gap-4 items-center mt-2">
@@ -2057,7 +2057,7 @@
                 </div>
                 <div class="flex items-center gap-3">
                     <input type="text" id="de2e" name="de2e" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-20" />
-                    учащиеся
+                    учащихся
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
@@ -2066,7 +2066,7 @@
                 </div>
                 <div class="flex items-center gap-4">
                     <input type="text" id="de3" name="de3" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-32" />
-                    классные комнаты
+                    классных комнат
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
@@ -2075,7 +2075,7 @@
                 </div>
                 <div class="flex items-center gap-4">
                     <input type="text" id="de4" name="de4" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-32" />
-                    помещения
+                    помещений
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
@@ -2085,7 +2085,7 @@
                 </div>
                 <div class="flex items-center gap-4">
                     <input type="text" id="rce1" name="rce1" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-32" />
-                    дети
+                    детей
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
@@ -2094,7 +2094,7 @@
                 </div>
                 <div class="flex items-center gap-4">
                     <input type="text" id="rce1a" name="rce1a" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-32" />
-                    дети
+                    детей
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
@@ -2103,7 +2103,7 @@
                 </div>
                 <div class="flex items-center gap-4">
                     <input type="text" id="rce1b" name="rce1b" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-32" />
-                    дети
+                    детей
                 </div>
             </div>
 
@@ -2115,7 +2115,7 @@
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
                         <input id="rce2_1" type="checkbox" value="1" name="rce2_1" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="rce2_1" class="ms-2 text-sm text-gray-900">Формальное  образование  деятельность (например, следование учебной программе, наличие учителя, получение аттестата и т.д.)</label>
+                        <label for="rce2_1" class="ms-2 text-sm text-gray-900">Формальное  образование (например, следование учебной программе, наличие учителя, получение аттестата и т.д.)</label>
                     </div>
                     <div class="flex items-center">
                         <input id="rce2_2" type="checkbox" value="1" name="rce2_2" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
@@ -2144,14 +2144,14 @@
                             <div>а. Выделенные помещения</div>
                             <div class="flex items-center gap-2">
                                 <input type="text" id="rce3a" name="rce3a" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-20" />
-                                пространства
+                                мест
                             </div>
                         </div>
                         <div class="grid grid-cols-2">
                             <div>b. Общие помещения</div>
                             <div class="flex items-center gap-2">
                                 <input type="text" id="rce3b" name="rce3b" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-20" />
-                                пространства
+                                мест
                             </div>
                         </div>
                     </div>
@@ -2164,11 +2164,11 @@
                 <tbody>
                     <tr>
                         <td class="text-center w-1/2"></td>
-                        <td class="text-center w-1/10">Very bad<br>1</td>
-                        <td class="text-center w-1/10"><span class="text-white">Very bad</span><br>2</td>
-                        <td class="text-center w-1/10"><span class="text-white">Very bad</span><br>3</td>
-                        <td class="text-center w-1/10"><span class="text-white">Very bad</span><br>4</td>
-                        <td class="text-center w-1/10">Excellent<br>5</td>
+                        <td class="text-center w-1/10">Очень плохо<br>1</td>
+                        <td class="text-center w-1/10"><span class="text-white">Очень плохо</span><br>2</td>
+                        <td class="text-center w-1/10"><span class="text-white">Очень плохо</span><br>3</td>
+                        <td class="text-center w-1/10"><span class="text-white">Очень плохо</span><br>4</td>
+                        <td class="text-center w-1/10">Отлично<br>5</td>
                     </tr>
                     <tr>
                         <td class="p-1">a. Помещения достаточны по размеру и количеству для проведения образовательных мероприятий.</td>
@@ -2179,7 +2179,7 @@
                         <td class="p-1 text-center"><input id="rce4a-5" type="radio" value="5" name="rce4a" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" /></td>
                     </tr>
                     <tr>
-                        <td class="p-1">b. Помещения хорошо оборудованы и ухожены для проведения образовательных мероприятий.</td>
+                        <td class="p-1">b. Помещения хорошо оборудованы и подходят для проведения образовательных мероприятий.</td>
                         <td class="p-1 text-center"><input id="rce4b-1" type="radio" value="1" name="rce4b" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" /></td>
                         <td class="p-1 text-center"><input id="rce4b-2" type="radio" value="2" name="rce4b" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" /></td>
                         <td class="p-1 text-center"><input id="rce4b-3" type="radio" value="3" name="rce4b" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" /></td>
@@ -2472,7 +2472,7 @@
                 </div>
                 <div class="flex items-center gap-4">
                     <input type="text" id="edu4" name="edu4" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-32" />
-                    пространства
+                    мест/комнат
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
@@ -2482,7 +2482,7 @@
                 </div>
                 <div class="flex items-center gap-4">
                     <input type="text" id="edu5" name="edu5" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-32" />
-                    sqm
+                    кв.м.
                 </div>
             </div>
 
@@ -2780,7 +2780,7 @@
                     </tr>
                     <tr>
                         <td class="text-left p-2">20.6</td>
-                        <td class="text-left p-2">Медикаменты</td>
+                        <td class="text-left p-2">Медицинские принадлежности</td>
                         <td class="text-center p-2">
                             <input type="text" id="e20_6" name="e20_6" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                         </td>
