--- a/src/pages/instruments/04_qmr_uz.html
+++ b/src/pages/instruments/04_qmr_uz.html
@@ -154,7 +154,7 @@
                     <input type="text" id="i10" name="i10" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
             </div>
-            <p class="italic uppercase mt-6 text-sm mb-2">FAQAT BOLALAR MUASSASALARI UCHUN</p>
+            <p class="italic uppercase mt-6 text-sm mb-2">FAQAT BOLALARGA VASIYLIK QILUVCHI MUASSASALAR UCHUN</p>
             <div class="grid grid-cols-2 gap-4 items-start">
                 <div>I12a. Hisobot yilining 31-dekabr holatiga ko'ra muassasada nechta bola istiqomat qiladi (2023)?</div>
                 <div class="flex items-center gap-4">
@@ -2080,7 +2080,7 @@
             </div>
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>
-                    <small class="italic block uppercase">FAQAT BOLALAR MUASSASALARI UCHUN</small>
+                    <small class="italic block uppercase">FAQAT BOLALARGA VASIYLIK QILUVCHI MUASSASALAR UCHUN</small>
                     RCE1. Muassasada yashab, boshqa joyda maktabga boradigan bolalar soni qancha?
                 </div>
                 <div class="flex items-center gap-4">
@@ -2144,14 +2144,14 @@
                             <div>a. Alohida ajratilgan joylar</div>
                             <div class="flex items-center gap-2">
                                 <input type="text" id="rce3a" name="rce3a" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-20" />
-                                bo'shliqlar
+                                joylar
                             </div>
                         </div>
                         <div class="grid grid-cols-2">
                             <div>b. Umumiy joylar</div>
                             <div class="flex items-center gap-2">
                                 <input type="text" id="rce3b" name="rce3b" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-20" />
-                                bo'shliqlar
+                                joylar
                             </div>
                         </div>
                     </div>
@@ -2164,11 +2164,11 @@
                 <tbody>
                     <tr>
                         <td class="text-center w-1/2"></td>
-                        <td class="text-center w-1/10">Very bad<br>1</td>
-                        <td class="text-center w-1/10"><span class="text-white">Very bad</span><br>2</td>
-                        <td class="text-center w-1/10"><span class="text-white">Very bad</span><br>3</td>
-                        <td class="text-center w-1/10"><span class="text-white">Very bad</span><br>4</td>
-                        <td class="text-center w-1/10">Excellent<br>5</td>
+                        <td class="text-center w-1/10">Juda yomon<br>1</td>
+                        <td class="text-center w-1/10"><span class="text-white">Juda yomon</span><br>2</td>
+                        <td class="text-center w-1/10"><span class="text-white">Juda yomon</span><br>3</td>
+                        <td class="text-center w-1/10"><span class="text-white">Juda yomon</span><br>4</td>
+                        <td class="text-center w-1/10">Zo'r<br>5</td>
                     </tr>
                     <tr>
                         <td class="p-1">a. Joylar hajmi va soni bo'yicha ta'lim faoliyati uchun yetarli.</td>
@@ -2482,7 +2482,7 @@
                 </div>
                 <div class="flex items-center gap-4">
                     <input type="text" id="edu5" name="edu5" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-32" />
-                    sqm
+                    kv.m.
                 </div>
             </div>
 
@@ -2936,7 +2936,7 @@
             </table>
 
             <div class="grid mt-10">
-                <label for="obs">OBS. Kuzatuvlarni</label>
+                <label for="obs">OBS. Izohlar</label>
                 <textarea class="form-control" rows="3" id="obs" name="obs"></textarea>
             </div>
 
