--- a/src/pages/instruments/05a_tqyp_en.html
+++ b/src/pages/instruments/05a_tqyp_en.html
@@ -215,7 +215,7 @@
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 items-center gap-4 mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>PTR5b. Region</div>
                 <div>
                     <select id="ptr5b" name="ptr5b" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
@@ -224,7 +224,7 @@
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 items-center gap-4 mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>PTR5c. District</div>
                 <div>
                     <select id="ptr5c" name="ptr5c" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
@@ -232,27 +232,9 @@
                     </select>
                 </div>
             </div>
-            <div class="grid grid-cols-2 items-center gap-4 mt-6">
-                <div>PTR5d. Settlement</div>
-                <div>
-                    <select id="ptr5d" name="ptr5d" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
-                        <option value="-9">--- choose ---</option>
-                    </select>
-                </div>
-            </div>
-            <div class="grid grid-cols-2 items-center gap-4 mt-6">
-                <div>PTR5m. Mahalla</div>
-                <div>
-                    <select id="ptr5m" name="ptr5m" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
-                        <option value="-9">--- choose ---</option>
-                    </select>
-                </div>
-            </div>
-
-            <input type="hidden" id="ptr5e" name="ptr5e" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
 
 
-            <div class="grid grid-cols-2 items-center gap-4 mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>PTR6. Date when the person left the childcare system (dd/mm/yyyy)</div>
                 <div>
                     <input type="text" id="ptr6" name="ptr6" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
@@ -356,7 +338,7 @@
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 items-center gap-4 mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>e. Region:</div>
                 <div>
                     <select id="ptr8e" name="ptr8e" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
@@ -365,7 +347,7 @@
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 items-center gap-4 mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>f. District:</div>
                 <div>
                     <select id="ptr8f" name="ptr8f" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
@@ -373,7 +355,7 @@
                     </select>
                 </div>
             </div>
-            <div class="grid grid-cols-2 items-center gap-4 mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>g. Settlement</div>
                 <div>
                     <select id="ptr8g" name="ptr8g" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
@@ -382,7 +364,7 @@
 
                 </div>
             </div>
-            <div class="grid grid-cols-2 items-center gap-4 mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>m. Mahalla</div>
                 <div>
                     <select id="ptr8m" name="ptr8m" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
