--- a/src/pages/instruments/07_ftch_ru.html
+++ b/src/pages/instruments/07_ftch_ru.html
@@ -636,7 +636,7 @@
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
                         <input id="fc4_c1cn1" type="checkbox" value="1" name="fc4_c1cn1" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-100 rounded">
-                        <label for="fc4_c1cn1" class="ms-2 text-sm text-gray-900">1. Инволидность</label>
+                        <label for="fc4_c1cn1" class="ms-2 text-sm text-gray-900">1. Инвалидность</label>
                     </div>
                     <div class="flex items-center">
                         <input id="fc4_c1cn2" type="checkbox" value="2" name="fc4_c1cn2" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-100 rounded">
@@ -737,7 +737,7 @@
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
                         <input id="fc4_c2cn1" type="checkbox" value="1" name="fc4_c2cn1" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-100 rounded">
-                        <label for="fc4_c2cn1" class="ms-2 text-sm text-gray-900">1. Инволидность</label>
+                        <label for="fc4_c2cn1" class="ms-2 text-sm text-gray-900">1. Инвалидность</label>
                     </div>
                     <div class="flex items-center">
                         <input id="fc4_c2cn2" type="checkbox" value="2" name="fc4_c2cn2" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-100 rounded">
@@ -839,7 +839,7 @@
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
                         <input id="fc4_c3cn1" type="checkbox" value="1" name="fc4_c3cn1" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-100 rounded">
-                        <label for="fc4_c3cn1" class="ms-2 text-sm text-gray-900">1. Инволидность</label>
+                        <label for="fc4_c3cn1" class="ms-2 text-sm text-gray-900">1. Инвалидность</label>
                     </div>
                     <div class="flex items-center">
                         <input id="fc4_c3cn2" type="checkbox" value="2" name="fc4_c3cn2" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-100 rounded">
@@ -942,7 +942,7 @@
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
                         <input id="fc4_c4cn1" type="checkbox" value="1" name="fc4_c4cn1" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-100 rounded">
-                        <label for="fc4_c4cn1" class="ms-2 text-sm text-gray-900">1. Инволидность</label>
+                        <label for="fc4_c4cn1" class="ms-2 text-sm text-gray-900">1. Инвалидность</label>
                     </div>
                     <div class="flex items-center">
                         <input id="fc4_c4cn2" type="checkbox" value="2" name="fc4_c4cn2" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-100 rounded">
@@ -1044,7 +1044,7 @@
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
                         <input id="fc4_c5cn1" type="checkbox" value="1" name="fc4_c5cn1" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-100 rounded">
-                        <label for="fc4_c5cn1" class="ms-2 text-sm text-gray-900">1. Инволидность</label>
+                        <label for="fc4_c5cn1" class="ms-2 text-sm text-gray-900">1. Инвалидность</label>
                     </div>
                     <div class="flex items-center">
                         <input id="fc4_c5cn2" type="checkbox" value="2" name="fc4_c5cn2" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-100 rounded">
@@ -1146,7 +1146,7 @@
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
                         <input id="fc4_c6cn1" type="checkbox" value="1" name="fc4_c6cn1" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-100 rounded">
-                        <label for="fc4_c6cn1" class="ms-2 text-sm text-gray-900">1. Инволидность</label>
+                        <label for="fc4_c6cn1" class="ms-2 text-sm text-gray-900">1. Инвалидность</label>
                     </div>
                     <div class="flex items-center">
                         <input id="fc4_c6cn2" type="checkbox" value="2" name="fc4_c6cn2" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-100 rounded">
@@ -1248,7 +1248,7 @@
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
                         <input id="fc4_c7cn1" type="checkbox" value="1" name="fc4_c7cn1" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-100 rounded">
-                        <label for="fc4_c7cn1" class="ms-2 text-sm text-gray-900">1. Инволидность</label>
+                        <label for="fc4_c7cn1" class="ms-2 text-sm text-gray-900">1. Инвалидность</label>
                     </div>
                     <div class="flex items-center">
                         <input id="fc4_c7cn2" type="checkbox" value="2" name="fc4_c7cn2" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-100 rounded">
@@ -1350,7 +1350,7 @@
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
                         <input id="fc4_c8cn1" type="checkbox" value="1" name="fc4_c8cn1" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-100 rounded">
-                        <label for="fc4_c8cn1" class="ms-2 text-sm text-gray-900">1. Инволидность</label>
+                        <label for="fc4_c8cn1" class="ms-2 text-sm text-gray-900">1. Инвалидность</label>
                     </div>
                     <div class="flex items-center">
                         <input id="fc4_c8cn2" type="checkbox" value="2" name="fc4_c8cn2" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-100 rounded">
@@ -1452,7 +1452,7 @@
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
                         <input id="fc4_c9cn1" type="checkbox" value="1" name="fc4_c9cn1" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-100 rounded">
-                        <label for="fc4_c9cn1" class="ms-2 text-sm text-gray-900">1. Инволидность</label>
+                        <label for="fc4_c9cn1" class="ms-2 text-sm text-gray-900">1. Инвалидность</label>
                     </div>
                     <div class="flex items-center">
                         <input id="fc4_c9cn2" type="checkbox" value="2" name="fc4_c9cn2" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-100 rounded">
@@ -1554,7 +1554,7 @@
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
                         <input id="fc4_c10cn1" type="checkbox" value="1" name="fc4_c10cn1" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-100 rounded">
-                        <label for="fc4_c10cn1" class="ms-2 text-sm text-gray-900">1. Инволидность</label>
+                        <label for="fc4_c10cn1" class="ms-2 text-sm text-gray-900">1. Инвалидность</label>
                     </div>
                     <div class="flex items-center">
                         <input id="fc4_c10cn2" type="checkbox" value="2" name="fc4_c10cn2" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-100 rounded">
