--- a/src/pages/instruments/07_ftch_uz.html
+++ b/src/pages/instruments/07_ftch_uz.html
@@ -2251,7 +2251,7 @@
             </div>
 
             <div class="grid mt-10">
-                <label for="obs">OBS. Kuzatuvlarni</label>
+                <label for="obs">OBS. Izohlar</label>
                 <textarea class="form-control" rows="3" id="obs" name="obs"></textarea>
             </div>
 
