--- a/src/pages/instruments/05_yplcs_uz.html
+++ b/src/pages/instruments/05_yplcs_uz.html
@@ -195,24 +195,6 @@
                     </select>
                 </div>
             </div>
-            <div class="grid grid-cols-2 gap-4 items-start mt-6">
-                <div>PI4d. Aholi punkti</div>
-                <div>
-                    <select id="pi4d" name="pi4d" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
-                        <option value="-9">--- tanlang ---</option>
-                    </select>
-                </div>
-            </div>
-            <div class="grid grid-cols-2 gap-4 items-start mt-6">
-                <div>PI4m. Mahalla</div>
-                <div>
-                    <select id="pi4m" name="pi4m" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
-                        <option value="-9">--- tanlang ---</option>
-                    </select>
-                </div>
-            </div>
-
-            <input type="hidden" id="pi4e" name="pi4e" />
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>PI5. Yosh odamning etnik kelib chiqishi (millati)</div>
@@ -2065,7 +2047,7 @@
             </div>
 
             <div class="grid mt-10">
-                <label for="obs">OBS. Kuzatuvlarni</label>
+                <label for="obs">OBS. Izohlar</label>
                 <textarea class="form-control" rows="3" id="obs" name="obs"></textarea>
             </div>
 
