--- a/src/pages/instruments/05a_tqyp_uz.html
+++ b/src/pages/instruments/05a_tqyp_uz.html
@@ -215,7 +215,7 @@
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 items-center gap-4 mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>PTR5b. Viloyat</div>
                 <div>
                     <select id="ptr5b" name="ptr5b" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
@@ -224,7 +224,7 @@
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 items-center gap-4 mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>PTR5c. Tuman</div>
                 <div>
                     <select id="ptr5c" name="ptr5c" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
@@ -232,28 +232,10 @@
                     </select>
                 </div>
             </div>
-            <div class="grid grid-cols-2 items-center gap-4 mt-6">
-                <div>PTR5d. Aholi punkti</div>
-                <div>
-                    <select id="ptr5d" name="ptr5d" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
-                        <option value="-9">--- tanlang ---</option>
-                    </select>
-                </div>
-            </div>
-            <div class="grid grid-cols-2 items-center gap-4 mt-6">
-                <div>PTR5m. Mahalla</div>
-                <div>
-                    <select id="ptr5m" name="ptr5m" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
-                        <option value="-9">--- tanlang ---</option>
-                    </select>
-                </div>
-            </div>
-
-            <input type="hidden" id="ptr5e" name="ptr5e" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
 
 
-            <div class="grid grid-cols-2 items-center gap-4 mt-6">
-                <div>PTR6. Yosh odam vasiylik tizimini tark etgan sana (kun / oy / yil)</div>
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
+                <div>PTR6. Yosh shaxs vasiylik tizimini tark etgan sana (kun / oy / yil)</div>
                 <div>
                     <input type="text" id="ptr6" name="ptr6" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
@@ -264,7 +246,7 @@
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
                         <input id="ptr7-1" type="radio" value="1" name="ptr7" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="ptr7-1" class="ms-2 text-sm text-gray-900">1. Oi'z olasiga qaytdi</label>
+                        <label for="ptr7-1" class="ms-2 text-sm text-gray-900">1. O'z oilasiga qaytdi</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ptr7-2" type="radio" value="2" name="ptr7" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
@@ -356,7 +338,7 @@
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 items-center gap-4 mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>e. Viloyat:</div>
                 <div>
                     <select id="ptr8e" name="ptr8e" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
@@ -365,7 +347,7 @@
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 items-center gap-4 mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>f. Tuman:</div>
                 <div>
                     <select id="ptr8f" name="ptr8f" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
@@ -373,7 +355,7 @@
                     </select>
                 </div>
             </div>
-            <div class="grid grid-cols-2 items-center gap-4 mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>g. Aholi punkti</div>
                 <div>
                     <select id="ptr8g" name="ptr8g" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
@@ -382,7 +364,7 @@
 
                 </div>
             </div>
-            <div class="grid grid-cols-2 items-center gap-4 mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>m. Mahalla</div>
                 <div>
                     <select id="ptr8m" name="ptr8m" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
@@ -410,7 +392,7 @@
             <p class="mt-10 bg-gray-200 px-2 py-1"><strong>Ushbu yosh shaxsga oid monitoring ishlarini o'tkazishi kerak bo'lgan INSON markazi.</strong></p>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
-                <div>OBS. Kuzatuvlarni</div>
+                <div>OBS. Izohlar</div>
                 <div class="flex gap-4">
                     <textarea id="obs" name="obs" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full"></textarea>
                 </div>
