--- a/src/pages/instruments/06_dsee_uz.html
+++ b/src/pages/instruments/06_dsee_uz.html
@@ -109,7 +109,7 @@
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 items-center gap-4 mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>I4c. Aholi punkti</div>
                 <div>
                     <select id="i4c" name="i4c" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
@@ -822,7 +822,7 @@
             </table>
 
             <div class="grid mt-10">
-                <label for="obs">OBS. Kuzatuvlarni</label>
+                <label for="obs">OBS. Izohlar</label>
                 <textarea class="form-control" rows="3" id="obs" name="obs"></textarea>
             </div>
 
