--- a/src/pages/instruments/08_pfq_uz.html
+++ b/src/pages/instruments/08_pfq_uz.html
@@ -2078,7 +2078,7 @@
             </div>
 
             <div class="grid mt-10">
-                <label for="obs">OBS. Kuzatuvlarni</label>
+                <label for="obs">OBS. Izohlar</label>
                 <textarea class="form-control" rows="3" id="obs" name="obs"></textarea>
             </div>
 
